接続先をRenderのポスグレに変更

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=Poll
 
-spring.datasource.url=jdbc:mysql://localhost:8889/pollapp
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.database.driverClassName=org.postgresql.Driver
+
+spring.datasource.url=jdbc:postgresql://jyunki:aYJDyalNMcpPrWisZIlwtj3sYdMWv8MP@dpg-csj38ce8ii6s73cuh490-a/pollapp
+spring.datasource.username=jyunki
+spring.datasource.password=aYJDyalNMcpPrWisZIlwtj3sYdMWv8MP
+server.port = 5432
