接続先URLを変更

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.database.driverClassName=org.postgresql.Driver
 
-spring.datasource.url=jdbc:postgresql://jyunki:aYJDyalNMcpPrWisZIlwtj3sYdMWv8MP@dpg-csj38ce8ii6s73cuh490-a/pollapp
+spring.datasource.url=jdbc:postgresql://dpg-csj38ce8ii6s73cuh490-a:5432/pollapp
 spring.datasource.username=jyunki
 spring.datasource.password=aYJDyalNMcpPrWisZIlwtj3sYdMWv8MP
 server.port = 5432
